Menambahkan bagian baru di halaman profil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>Mahasiswa D3 Teknik Informatika</p>
     </div>
     <div class="hero-img">
-      <img src="https://via.placeholder.com/200" alt="Foto Profil" />
+      <img src="baek.jpg" alt="Foto Profil" />
     </div>
   </section>
 
@@ -32,11 +32,11 @@
     <h2>Biodata</h2>
     <div class="biodata-box">
       <div class="box">Nama: Ardhitya Danur Siswondo</div>
-      <div class="box">NIM: 123456789</div>
+      <div class="box">NIM: 3312411099</div>
       <div class="box">Jurusan: Teknik Informatika</div>
       <div class="box">Kampus: Politeknik Negeri Batam</div>
       <div class="box">Email: ardhitya@email.com</div>
-      <div class="box">No HP: 08123456789</div>
+      <div class="box">No HP: 081363723553</div>
     </div>
   </section>
 
