Initial commit: Profil Biodata Responsive

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Profil Biodata</title>
+  <title>Profil Ardhitya</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Section 1: Menu -->
+
+  <!-- Navigation -->
   <nav class="menu">
     <ul>
       <li><a href="#beranda">Beranda</a></li>
@@ -16,50 +17,48 @@
     </ul>
   </nav>
 
-  <!-- Section 2: Judul & Gambar -->
+  <!-- Hero Section -->
   <section class="hero" id="beranda">
     <div class="hero-text">
       <h1>Halo, saya Ardhitya</h1>
-      <p>Mahasiswa D3 Teknik Informatika</p>
+      <p>Mahasiswa D3 Teknik Informatika di Politeknik Negeri Batam</p>
     </div>
     <div class="hero-img">
-      <img src="baek.jpg" alt="Foto Profil" />
+      <img src="images/ardhitya.png" alt="Foto Ardhitya" />
     </div>
   </section>
 
-  <!-- Section 3: Biodata -->
+  <!-- Biodata Section -->
   <section class="biodata" id="biodata">
     <h2>Biodata</h2>
     <div class="biodata-box">
-      <div class="box">Nama: Ardhitya Danur Siswondo</div>
-      <div class="box">NIM: 3312411099</div>
-      <div class="box">Jurusan: Teknik Informatika</div>
-      <div class="box">Kampus: Politeknik Negeri Batam</div>
-      <div class="box">Email: ardhitya@email.com</div>
-      <div class="box">No HP: 081363723553</div>
+      <div class="box">👤 Nama: Ardhitya Danur Siswondo</div>
+      <div class="box">🆔 NIM: 3312411099</div>
+      <div class="box">🏫 Jurusan: Teknik Informatika</div>
+      <div class="box">🎓 Kampus: Politeknik Negeri Batam</div>
+      <div class="box">📧 Email: ardhityasiswondo@gmail.com</div>
+      <div class="box">📱 No HP: 081363723553</div>
     </div>
   </section>
 
-  <!-- Section 4: Portofolio -->
+  <!-- Portofolio Section -->
   <section class="portofolio" id="portofolio">
     <h2>Portofolio</h2>
-    <table border="1">
-      <tr>
-        <th>Proyek</th>
-        <th>Deskripsi</th>
-        <th>Tahun</th>
-      </tr>
-      <tr>
-        <td>Rental Mobil</td>
-        <td>Aplikasi untuk pemesanan mobil secara online</td>
-        <td>2024</td>
-      </tr>
-      <tr>
-        <td>Kursus Bahasa</td>
-        <td>Platform kursus bahasa asing online</td>
-        <td>2025</td>
-      </tr>
-    </table>
+    <div class="portofolio-grid">
+      <div class="card">
+        <img src="images/rental.png" alt="Rental Mobil" />
+        <h3>Rental Mobil</h3>
+        <p>Aplikasi untuk pemesanan mobil secara online</p>
+        <span>2024</span>
+      </div>
+      <div class="card">
+        <img src="images/kursus.png" alt="Kursus Bahasa" />
+        <h3>Kursus Bahasa</h3>
+        <p>Platform kursus bahasa asing online</p>
+        <span>2025</span>
+      </div>
+    </div>
   </section>
+
 </body>
 </html>
