Menambahkan gambar profil github dan link github

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       <div class="box">🎓 Kampus: Politeknik Negeri Batam</div>
       <div class="box">📧 Email: ardhityasiswondo@gmail.com</div>
       <div class="box">📱 No HP: 081363723553</div>
+      <div class="box">
+      <a href="https://github.com/ardhitya13" target="_blank">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
+            alt="GitHub Icon" 
+            style="width:24px; vertical-align: middle; margin-right: 6px;">
+        github.com/ardhitya13
+      </a>
+      </div>
     </div>
   </section>
 
