Add full profil biodata website with responsive design

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Profil Ardhitya</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Profil Ardhitya Danur Siswondo</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,6 +12,7 @@
   <nav class="menu">
     <ul>
       <li><a href="#beranda">Beranda</a></li>
+      <li><a href="#about">About Me</a></li>
       <li><a href="#biodata">Biodata</a></li>
       <li><a href="#portofolio">Portofolio</a></li>
     </ul>
@@ -28,6 +29,19 @@
     </div>
   </section>
 
+  <!-- About Me Section -->
+  <section class="about" id="about">
+    <div class="about-bg"></div>
+    <div class="about-content">
+      <h2>About Me</h2>
+      <p>
+        Saya adalah mahasiswa D3 Teknik Informatika yang memiliki semangat belajar tinggi dan
+        terus berusaha mengembangkan kemampuan dalam pemrograman dan teknologi web.
+        Saya suka mengerjakan proyek kreatif dan berkolaborasi dalam tim.
+      </p>
+    </div>
+  </section>
+
   <!-- Biodata Section -->
   <section class="biodata" id="biodata">
     <h2>Biodata</h2>
@@ -38,14 +52,10 @@
       <div class="box">🎓 Kampus: Politeknik Negeri Batam</div>
       <div class="box">📧 Email: ardhityasiswondo@gmail.com</div>
       <div class="box">📱 No HP: 081363723553</div>
-      <div class="box">
-      <a href="https://github.com/ardhitya13" target="_blank">
-        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
-            alt="GitHub Icon" 
-            style="width:24px; vertical-align: middle; margin-right: 6px;">
-        github.com/ardhitya13
-      </a>
-      </div>
+      <div class="box">🔗 GitHub: <a href="https://github.com/ardhitya13" target="_blank" rel="noopener">github.com/ardhitya13</a></div>
+      <div class="box">📸 Instagram: <a href="https://www.instagram.com/ardhitya__/" target="_blank" rel="noopener">ardhitya__</a></div>
+      <div class="box">📘 Facebook: <a href="https://www.facebook.com/ardhitya.siswondo.3/" target="_blank" rel="noopener">ardhitya.siswondo.3</a></div>
+      <div class="box">🎵 TikTok: <a href="https://www.tiktok.com/@ardhitya2.0" target="_blank" rel="noopener">@ardhitya2.0</a></div>
     </div>
   </section>
 
@@ -67,6 +77,11 @@
       </div>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Ardhitya Danur Siswondo. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
