--- a/index.html
+++ b/index.html
@@ -4,84 +4,189 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Profil Ardhitya Danur Siswondo</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .hero-box {
+      background: linear-gradient(to right, #0d6efd, #6610f2);
+      border-radius: 15px;
+      padding: 30px;
+      color: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    .hero-box img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .biodata-card {
+      border: 1px solid #dee2e6;
+      border-radius: 10px;
+      padding: 20px;
+      background-color: #f8f9fa;
+      height: 100%;
+    }
+    .biodata-card:hover {
+      background-color: #e9ecef;
+      transition: 0.3s;
+    }
+    .card img {
+      height: 200px;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Navigation -->
-  <nav class="menu">
-    <ul>
-      <li><a href="#beranda">Beranda</a></li>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#biodata">Biodata</a></li>
-      <li><a href="#portofolio">Portofolio</a></li>
-    </ul>
-  </nav>
-
-  <!-- Hero Section -->
-  <section class="hero" id="beranda">
-    <div class="hero-text">
-      <h1>Halo, saya Ardhitya</h1>
-      <p>Mahasiswa D3 Teknik Informatika di Politeknik Negeri Batam</p>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">Ardhitya</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#beranda">Beranda</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+        <li class="nav-item"><a class="nav-link" href="#biodata">Biodata</a></li>
+        <li class="nav-item"><a class="nav-link" href="#portofolio">Portofolio</a></li>
+      </ul>
     </div>
-    <div class="hero-img">
-      <img src="images/ardhitya.png" alt="Foto Ardhitya" />
-    </div>
-  </section>
+  </div>
+</nav>
 
-  <!-- About Me Section -->
-  <section class="about" id="about">
-    <div class="about-bg"></div>
-    <div class="about-content">
-      <h2>About Me</h2>
-      <p>
-        Saya adalah mahasiswa D3 Teknik Informatika yang memiliki semangat belajar tinggi dan
-        terus berusaha mengembangkan kemampuan dalam pemrograman dan teknologi web.
-        Saya suka mengerjakan proyek kreatif dan berkolaborasi dalam tim.
-      </p>
-    </div>
-  </section>
-
-  <!-- Biodata Section -->
-  <section class="biodata" id="biodata">
-    <h2>Biodata</h2>
-    <div class="biodata-box">
-      <div class="box">👤 Nama: Ardhitya Danur Siswondo</div>
-      <div class="box">🆔 NIM: 3312411099</div>
-      <div class="box">🏫 Jurusan: Teknik Informatika</div>
-      <div class="box">🎓 Kampus: Politeknik Negeri Batam</div>
-      <div class="box">📧 Email: ardhityasiswondo@gmail.com</div>
-      <div class="box">📱 No HP: 081363723553</div>
-      <div class="box">🔗 GitHub: <a href="https://github.com/ardhitya13" target="_blank" rel="noopener">github.com/ardhitya13</a></div>
-      <div class="box">📸 Instagram: <a href="https://www.instagram.com/ardhitya__/" target="_blank" rel="noopener">ardhitya__</a></div>
-      <div class="box">📘 Facebook: <a href="https://www.facebook.com/ardhitya.siswondo.3/" target="_blank" rel="noopener">ardhitya.siswondo.3</a></div>
-      <div class="box">🎵 TikTok: <a href="https://www.tiktok.com/@ardhitya2.0" target="_blank" rel="noopener">@ardhitya2.0</a></div>
-    </div>
-  </section>
-
-  <!-- Portofolio Section -->
-  <section class="portofolio" id="portofolio">
-    <h2>Portofolio</h2>
-    <div class="portofolio-grid">
-      <div class="card">
-        <img src="images/rental.png" alt="Rental Mobil" />
-        <h3>Rental Mobil</h3>
-        <p>Aplikasi untuk pemesanan mobil secara online</p>
-        <span>2024</span>
+<!-- Hero Section -->
+<section id="beranda" class="py-5 bg-light">
+  <div class="container">
+    <div class="row align-items-center g-4">
+      <div class="col-md-6">
+        <div class="hero-box text-center text-md-start">
+          <h1 class="fw-bold">Halo, saya Ardhitya 👋</h1>
+          <p class="lead">Mahasiswa D3 Teknik Informatika di Politeknik Negeri Batam. Aktif mengembangkan aplikasi web dan siap menghadapi tantangan baru di dunia teknologi.</p>
+          <a href="#about" class="btn btn-light mt-3">Tentang Saya</a>
+        </div>
       </div>
-      <div class="card">
-        <img src="images/kursus.png" alt="Kursus Bahasa" />
-        <h3>Kursus Bahasa</h3>
-        <p>Platform kursus bahasa asing online</p>
-        <span>2025</span>
+      <div class="col-md-6 text-center">
+        <img src="images/ardhitya.png" alt="Foto Ardhitya" class="img-fluid rounded shadow">
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© 2025 Ardhitya Danur Siswondo. All rights reserved.</p>
-  </footer>
+<!-- About Section -->
+<section id="about" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">About Me</h2>
+    <p class="text-center">
+      Saya adalah mahasiswa D3 Teknik Informatika yang memiliki semangat belajar tinggi dan
+      terus berusaha mengembangkan kemampuan dalam pemrograman dan teknologi web.
+      Saya suka mengerjakan proyek kreatif dan berkolaborasi dalam tim.
+    </p>
+  </div>
+</section>
 
+<!-- Biodata Section -->
+<section id="biodata" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center mb-4">Biodata</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="biodata-card">👤 Nama: <strong>Ardhitya Danur Siswondo</strong></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">🆔 NIM: <strong>3312411099</strong></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">🏫 Jurusan: <strong>Teknik Informatika</strong></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">🎓 Kampus: <strong>Politeknik Negeri Batam</strong></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">📧 Email: <strong>ardhityasiswondo@gmail.com</strong></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">📱 No HP: <strong>081363723553</strong></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">🔗 GitHub: <a href="https://github.com/ardhitya13" target="_blank">github.com/ardhitya13</a></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">📸 Instagram: <a href="https://www.instagram.com/ardhitya__/" target="_blank">ardhitya__</a></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">📘 Facebook: <a href="https://www.facebook.com/ardhitya.siswondo.3/" target="_blank">ardhitya.siswondo.3</a></div>
+      </div>
+      <div class="col">
+        <div class="biodata-card">🎵 TikTok: <a href="https://www.tiktok.com/@ardhitya2.0" target="_blank">@ardhitya2.0</a></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Portfolio Section -->
+<section id="portofolio" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Portofolio</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="card h-100 shadow-sm">
+          <img src="images/rental.png" class="card-img-top" alt="Rental Mobil">
+          <div class="card-body">
+            <h5 class="card-title">Rental Mobil</h5>
+            <p class="card-text">Aplikasi untuk pemesanan mobil secara online.</p>
+            <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#rentalModal">Lihat Detail</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card h-100 shadow-sm">
+          <img src="images/kursus.png" class="card-img-top" alt="Kursus Bahasa">
+          <div class="card-body">
+            <h5 class="card-title">Kursus Bahasa</h5>
+            <p class="card-text">Platform kursus bahasa asing online.</p>
+            <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#kursusModal">Lihat Detail</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Modals -->
+<div class="modal fade" id="rentalModal" tabindex="-1" aria-labelledby="rentalModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="rentalModalLabel">Rental Mobil</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Tutup"></button>
+      </div>
+      <div class="modal-body">
+        Proyek sistem rental mobil berbasis web menggunakan HTML, CSS, dan PHP. Tahun: 2024
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="kursusModal" tabindex="-1" aria-labelledby="kursusModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="kursusModalLabel">Kursus Bahasa</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Tutup"></button>
+      </div>
+      <div class="modal-body">
+        Platform kursus bahasa asing online menggunakan Laravel dan Tailwind CSS. Tahun: 2025
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="bg-primary text-white text-center py-3">
+  <p class="mb-0">© 2025 Ardhitya Danur Siswondo. All rights reserved.</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
