--- a/index.html
+++ b/index.html
@@ -6,47 +6,68 @@
   <title>Profil Ardhitya Danur Siswondo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    :root {
+      scroll-behavior: smooth;
+    }
+
     .hero-box {
       background: linear-gradient(to right, #0d6efd, #6610f2);
-      border-radius: 15px;
-      padding: 30px;
+      border-radius: 20px;
+      padding: 40px;
       color: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+      transition: 0.3s ease;
+    }
+
+    .hero-box:hover {
+      transform: translateY(-5px);
     }
 
     .hero-photo {
-      max-width: 280px;
+      max-width: 260px;
       width: 100%;
       border-radius: 50%;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.3);
       border: 5px solid #fff;
     }
 
     .biodata-card {
       border: 1px solid #dee2e6;
-      border-radius: 10px;
-      padding: 20px;
+      border-radius: 12px;
+      padding: 18px;
       background-color: #f8f9fa;
       height: 100%;
+      transition: 0.3s;
     }
 
     .biodata-card:hover {
-      background-color: #e9ecef;
-      transition: 0.3s;
+      background-color: #e2e6ea;
+      transform: scale(1.02);
     }
 
     .card img {
       height: 200px;
       object-fit: cover;
+      border-top-left-radius: 12px;
+      border-top-right-radius: 12px;
+    }
+
+    .modal-body {
+      font-size: 1rem;
+    }
+
+    footer p {
+      margin-bottom: 0;
+      font-size: 0.95rem;
     }
   </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top shadow-sm">
   <div class="container">
-    <a class="navbar-brand" href="#">Ardhitya</a>
+    <a class="navbar-brand fw-bold" href="#">Ardhitya</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -62,14 +83,16 @@
 </nav>
 
 <!-- Hero Section -->
-<section id="beranda" class="py-5 bg-light">
+<header id="beranda" class="py-5 bg-light">
   <div class="container">
     <div class="row align-items-center g-4">
       <div class="col-md-6">
         <div class="hero-box text-center text-md-start">
-          <h1 class="fw-bold">Halo, saya Ardhitya 👋</h1>
-          <p class="lead">Mahasiswa D3 Teknik Informatika di Politeknik Negeri Batam. Aktif mengembangkan aplikasi web dan siap menghadapi tantangan baru di dunia teknologi.</p>
-          <a href="#about" class="btn btn-light mt-3">Tentang Saya</a>
+          <h1 class="fw-bold mb-3">Halo, saya Ardhitya 👋</h1>
+          <p class="lead mb-4">
+            Mahasiswa D3 Teknik Informatika di Politeknik Negeri Batam. Aktif mengembangkan aplikasi web dan siap menghadapi tantangan baru di dunia teknologi.
+          </p>
+          <a href="#about" class="btn btn-light fw-semibold">Tentang Saya</a>
         </div>
       </div>
       <div class="col-md-6 text-center">
@@ -77,16 +100,14 @@
       </div>
     </div>
   </div>
-</section>
+</header>
 
 <!-- About Section -->
 <section id="about" class="py-5">
   <div class="container">
     <h2 class="text-center mb-4">About Me</h2>
-    <p class="text-center">
-      Saya adalah mahasiswa D3 Teknik Informatika yang memiliki semangat belajar tinggi dan
-      terus berusaha mengembangkan kemampuan dalam pemrograman dan teknologi web.
-      Saya suka mengerjakan proyek kreatif dan berkolaborasi dalam tim.
+    <p class="text-center col-md-8 mx-auto">
+      Saya adalah mahasiswa D3 Teknik Informatika yang memiliki semangat belajar tinggi dan terus berusaha mengembangkan kemampuan dalam pemrograman dan teknologi web. Saya suka mengerjakan proyek kreatif dan berkolaborasi dalam tim.
     </p>
   </div>
 </section>
@@ -101,11 +122,11 @@
       <div class="col"><div class="biodata-card">🏫 Jurusan: <strong>Teknik Informatika</strong></div></div>
       <div class="col"><div class="biodata-card">🎓 Kampus: <strong>Politeknik Negeri Batam</strong></div></div>
       <div class="col"><div class="biodata-card">📧 Email: <strong>ardhityasiswondo@gmail.com</strong></div></div>
-      <div class="col"><div class="biodata-card">📱 No HP: <strong>081363723553</strong></div></div>
-      <div class="col"><div class="biodata-card">🔗 GitHub: <a href="https://github.com/ardhitya13" target="_blank">github.com/ardhitya13</a></div></div>
-      <div class="col"><div class="biodata-card">📸 Instagram: <a href="https://www.instagram.com/ardhitya__/" target="_blank">ardhitya__</a></div></div>
-      <div class="col"><div class="biodata-card">📘 Facebook: <a href="https://www.facebook.com/ardhitya.siswondo.3/" target="_blank">ardhitya.siswondo.3</a></div></div>
-      <div class="col"><div class="biodata-card">🎵 TikTok: <a href="https://www.tiktok.com/@ardhitya2.0" target="_blank">@ardhitya2.0</a></div></div>
+      <div class="col"><div class="biodata-card">📱 No HP: <strong>0813-6372-3553</strong></div></div>
+      <div class="col"><div class="biodata-card">🔗 GitHub: <a href="https://github.com/ardhitya13" target="_blank" rel="noopener">github.com/ardhitya13</a></div></div>
+      <div class="col"><div class="biodata-card">📸 Instagram: <a href="https://www.instagram.com/ardhitya_/" target="blank" rel="noopener">@ardhitya</a></div></div>
+      <div class="col"><div class="biodata-card">📘 Facebook: <a href="https://www.facebook.com/ardhitya.siswondo.3/" target="_blank" rel="noopener">ardhitya.siswondo.3</a></div></div>
+      <div class="col"><div class="biodata-card">🎵 TikTok: <a href="https://www.tiktok.com/@ardhitya2.0" target="_blank" rel="noopener">@ardhitya2.0</a></div></div>
     </div>
   </div>
 </section>
@@ -165,8 +186,8 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-primary text-white text-center py-3">
-  <p class="mb-0">© 2025 Ardhitya Danur Siswondo. All rights reserved.</p>
+<footer class="bg-primary text-white text-center py-3 mt-4">
+  <p>© 2025 Ardhitya Danur Siswondo. All rights reserved.</p>
 </footer>
 
 <!-- Bootstrap JS -->
